Funcionando, se agregaron gráficas, siendo posible actualizarlas con los datos de los dias, ademas se puede encender y apagar la estacion desde la app

--- a/app/src/main/res/layout/activity_pruebas.xml
+++ b/app/src/main/res/layout/activity_pruebas.xml
@@ -11,7 +11,8 @@
         android:layout_height="259dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        tools:layout_editor_absoluteY="1dp"
+        tools:ignore="MissingConstraints">
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/barChart"
@@ -19,6 +20,8 @@
             android:layout_height="208dp" >
 
         </com.github.mikephil.charting.charts.BarChart>
+
+
 
         <TextView
             android:id="@+id/salida"
