--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -32,7 +32,7 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="-------    SignUp    -------"
+            android:text="@string/etSingUp"
             android:textAlignment="center" />
 
         <Space
@@ -42,25 +42,25 @@
         <EditText
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:ems="10"
-            android:hint="Email"
+            android:hint="@string/etEmail"
             android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:ems="10"
-            android:hint="Contraseña"
+            android:hint="@string/etPassword"
             android:inputType="textPassword" />
 
         <EditText
             android:id="@+id/etRePassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:ems="10"
-            android:hint="Repita Contraseña"
+            android:hint="@string/etRePasswordEmail"
             android:inputType="textPassword" />
 
         <LinearLayout
@@ -73,21 +73,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Registrar" />
+                android:text="@string/btSignUp" />
 
             <Button
                 android:id="@+id/btLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Acceder" />
+                android:text="@string/btLogin" />
         </LinearLayout>
 
         <Button
             android:id="@+id/btGoogle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Google"
+            android:text="@string/btGoogle"
             app:icon="@drawable/googleicon" />
 
         <Space
@@ -98,7 +98,7 @@
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="-------    Contrato    -------"
+            android:text="@string/tvContract"
             android:textAlignment="center" />
 
         <Space
@@ -109,14 +109,14 @@
             android:id="@+id/cbTerms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="He leído y acepto los términos y condiciones del servicio." />
+            android:text="@string/cbTerms" />
 
         <TextView
             android:id="@+id/etTerms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Terminos y Condiciones "
+            android:text="@string/tvTermsAndConditions"
             android:textColor="#1831D3"
             android:textAlignment="textEnd"/>
 
