--- a/app/src/main/res/layout/fragment_log_out.xml
+++ b/app/src/main/res/layout/fragment_log_out.xml
@@ -8,7 +8,7 @@
 
 
     <LinearLayout
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
