--- a/app/src/main/res/layout/fragment_higrometer.xml
+++ b/app/src/main/res/layout/fragment_higrometer.xml
@@ -24,7 +24,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textGallery"
+                android:id="@+id/tvSensor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="lm393"
@@ -63,7 +63,7 @@
                 android:id="@+id/imageView4"
                 android:layout_width="match_parent"
                 android:layout_height="204dp"
-                android:src="@drawable/lum" />
+                android:src="@drawable/hum" />
 
         </LinearLayout>
 
