--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -80,7 +80,7 @@
                             android:text="TextView"
                             android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="42dp" />
+                            android:textSize="38dp" />
 
                         <TextView
                             android:id="@+id/tvFecha"
@@ -287,7 +287,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView21"
+                            android:id="@+id/tvAtm"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
