--- a/app/src/main/res/layout/fragment_higrometer.xml
+++ b/app/src/main/res/layout/fragment_higrometer.xml
@@ -82,7 +82,7 @@
                     android:layout_height="14dp" />
 
                 <TextView
-                    android:id="@+id/etluminousintensity"
+                    android:id="@+id/etHumidity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="23 °C"
