--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -52,7 +52,7 @@
 
 
                 <item
-                android:id="@+id/nav_log_out"
+                android:id="@+id/nav_logout"
                 android:icon="@drawable/baseline_logout_24"
                 android:title="Cerrar Sesión" />
 
