--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,10 +27,10 @@
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
-        android:id="@+id/nav_log_out"
-        android:name="com.infinitegearstudio.skysense.ui.logout.logOutFragment"
+        android:id="@+id/nav_logout"
+        android:name="com.infinitegearstudio.skysense.ui.logout.LogoutFragment"
         android:label="@string/logOut"
-        tools:layout="@layout/fragment_log_out" />
+        tools:layout="@layout/fragment_logout" />
 
     <fragment
         android:id="@+id/nav_thermometer"
